unpackaged/main/default/objects/lead_TP_44989_web_data__c/lead_TP_44989_web_data__c.object-meta.xml
<CustomObject>
    <description>Created by TP Connector</description>
    <label>TP 44989 Lead Webcast Data</label>
    <nameField>
        <label>TP 44989 Lead Webcast Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TP 44989 Lead Webcast Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>