unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/LD_TP_Web_Data_44989__c.field-meta.xml
<CustomField>
    <fullName>LD_TP_Web_Data_44989__c</fullName>
    <label>Lead TP Webcast Data 44989</label>
    <referenceTo>Lead_TP_Web_Data__c</referenceTo>
    <relationshipLabel>Lead TP Webcast Data 44989</relationshipLabel>
    <relationshipName>LD_TP_Web_Data_44989</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>