unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyITandR_Inadditionto__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_Inadditionto__c</fullName>
    <label>Survey: IT and Reg:In addition to a r</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>