unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyITandR_Lessonslearn__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_Lessonslearn__c</fullName>
    <label>Survey: IT and Reg:Lessons learned in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>