unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyITandR_Thesixpartso__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_Thesixpartso__c</fullName>
    <label>Survey: IT and Reg:The six parts of d</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>