unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyITandR_TrueofFalseC__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_TrueofFalseC__c</fullName>
    <label>Survey: IT and Reg:True of False: Con</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>