unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyPoll1s_Describeyour__c.field-meta.xml
<CustomField>
    <fullName>SurveyPoll1s_Describeyour__c</fullName>
    <label>Survey: Poll #1 (s:Describe your Prim</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>