unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyUsingS_Inadditionto__c.field-meta.xml
<CustomField>
    <fullName>SurveyUsingS_Inadditionto__c</fullName>
    <label>Survey: Using Shar:In addition to a r</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>