unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/SurveyUsingS_Thefoursteps__c.field-meta.xml
<CustomField>
    <fullName>SurveyUsingS_Thefoursteps__c</fullName>
    <label>Survey: Using Shar:The four steps of</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>