unpackaged/main/default/objects/lead_TP_44989_web_data__c/fields/tracklink__c.field-meta.xml
<CustomField>
    <fullName>tracklink__c</fullName>
    <label>CR adid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>